<resources>
    <string name="app_name">HWAndroid 7.1</string>

    <string name="_0">0</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="division">÷</string>
    <string name="c">C</string>
    <string name="plusOrMinus">+/-</string>
    <string name="percent">%</string>
    <string name="multiplication">×</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="minus">-</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="plus">+</string>
    <string name="point">.</string>
    <string name="equally">=</string>
    <string name="p">P</string>
    <string name="r">R</string>
    <string name="y">Y</string>
    <string name="k">K</string>
    <string name="h">H</string>
    <string name="o">O</string>
    <string name="d">D</string>
    <string name="z">Z</string>
    <string name="a">A</string>
</resources>
