<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:showIn="@layout/activity_main">

    <Button
        android:id="@+id/clean"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_below="@id/total"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:background="#BEDDDA"
        android:gravity="center"
        android:text="@string/c"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@id/total" />

    <Button
        android:id="@+id/plusOrMinus"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_below="@id/total"
        android:layout_marginStart="2dp"
        android:layout_marginTop="50dp"
        android:layout_toEndOf="@id/clean"

        android:background="#BEDDDA"
        android:gravity="center"
        android:text="@string/plusOrMinus"
        android:textSize="30sp"

        app:layout_constraintStart_toEndOf="@id/clean"
        app:layout_constraintTop_toBottomOf="@id/total" />

    <Button
        android:id="@+id/percent"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="50dp"

        android:background="#BEDDDA"
        android:gravity="center"
        android:text="@string/percent"
        android:textSize="30sp"

        app:layout_constraintStart_toEndOf="@id/plusOrMinus"
        app:layout_constraintTop_toBottomOf="@id/total" />

    <Button
        android:id="@+id/eight"
        android:layout_width="70dp"
        android:layout_height="70dp"

        android:layout_marginStart="2dp"
        android:layout_marginTop="2dp"
        android:background="#BEDDDA"

        android:gravity="center"
        android:text="@string/_8"


        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/nine"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/seven"
        app:layout_constraintTop_toBottomOf="@+id/plusOrMinus" />

    <Button
        android:id="@+id/nine"
        android:layout_width="70dp"
        android:layout_height="70dp"

        android:layout_marginStart="2dp"
        android:layout_marginTop="2dp"
        android:background="#BEDDDA"

        android:gravity="center"
        android:text="@string/_9"


        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toEndOf="@+id/eight"
        app:layout_constraintTop_toBottomOf="@+id/percent" />

    <Button
        android:id="@+id/seven"
        android:layout_width="70dp"
        android:layout_height="70dp"

        android:layout_marginTop="2dp"
        android:background="#BEDDDA"
        android:gravity="center"

        android:text="@string/_7"

        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/eight"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clean" />

    <Button
        android:id="@+id/four"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="2dp"
        android:background="#BEDDDA"
        android:gravity="center"
        android:text="@string/_4"
        android:textSize="30sp"


        app:layout_constraintEnd_toStartOf="@+id/five"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seven" />

    <Button
        android:id="@+id/five"
        android:layout_width="70dp"
        android:layout_height="70dp"

        android:layout_marginStart="2dp"
        android:layout_marginTop="2dp"
        android:background="#BEDDDA"
        android:gravity="center"
        android:text="@string/_5"


        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/six"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/four"
        app:layout_constraintTop_toBottomOf="@+id/eight" />

    <Button
        android:id="@+id/six"
        android:layout_width="70dp"
        android:layout_height="70dp"

        android:layout_marginStart="2dp"
        android:layout_marginTop="2dp"
        android:background="#BEDDDA"
        android:gravity="center"
        android:text="@string/_6"
        android:textSize="30sp"


        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/five"
        app:layout_constraintTop_toBottomOf="@+id/nine" />

    <Button
        android:id="@+id/one"
        android:layout_width="70dp"
        android:layout_height="70dp"

        android:layout_marginTop="2dp"
        android:background="#BEDDDA"
        android:gravity="center"
        android:text="@string/_1"

        android:textSize="30sp"


        app:layout_constraintEnd_toStartOf="@+id/two"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/four" />

    <Button
        android:id="@+id/two"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="2dp"
        android:background="#BEDDDA"
        android:gravity="center"

        android:text="@string/_2"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/three"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/one"
        app:layout_constraintTop_toBottomOf="@+id/five" />

    <Button
        android:id="@+id/three"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="2dp"
        android:background="#BEDDDA"
        android:gravity="center"
        android:text="@string/_3"
        android:textSize="30sp"

        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/two"
        app:layout_constraintTop_toBottomOf="@+id/six" />

    <Button
        android:id="@+id/zero"
        android:layout_width="142dp"
        android:layout_height="70dp"

        android:layout_marginTop="2dp"
        android:background="#BEDDDA"
        android:gravity="center"
        android:text="@string/_0"
        android:textSize="30sp"

        app:layout_constraintEnd_toStartOf="@+id/point"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/one" />

    <Button
        android:id="@+id/point"
        android:layout_width="70dp"
        android:layout_height="70dp"

        android:layout_marginStart="2dp"
        android:layout_marginTop="2dp"
        android:background="#BEDDDA"
        android:gravity="center"
        android:text="@string/point"
        android:textSize="30sp"

        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/zero"
        app:layout_constraintTop_toBottomOf="@+id/three" />

    <Button
        android:id="@+id/plus"
        android:layout_width="70dp"
        android:layout_height="70dp"

        android:background="#FF9800"
        android:gravity="center"
        android:text="@string/plus"
        android:textColor="@android:color/background_light"

        android:textSize="30sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/three"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline" />

    <Button
        android:id="@+id/division"
        android:layout_width="70dp"
        android:layout_height="70dp"

        android:background="#FF9800"
        android:gravity="center"
        android:text="@string/division"
        android:textColor="@android:color/background_light"
        android:textSize="30sp"


        app:layout_constraintBaseline_toBaselineOf="@+id/percent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/multiplication"
        android:layout_width="70dp"
        android:layout_height="70dp"

        android:background="#FF9800"
        android:gravity="center"
        android:text="@string/multiplication"
        android:textColor="@android:color/background_light"
        android:textSize="30sp"

        app:layout_constraintBaseline_toBaselineOf="@+id/nine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline" />

    <Button
        android:id="@+id/minus"
        android:layout_width="70dp"
        android:layout_height="70dp"

        android:background="#FF9800"
        android:gravity="center"
        android:text="@string/minus"
        android:textColor="@android:color/background_light"
        android:textSize="30sp"

        app:layout_constraintBaseline_toBaselineOf="@+id/six"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline" />

    <Button
        android:id="@+id/equally"
        android:layout_width="70dp"
        android:layout_height="70dp"

        android:background="#FF9800"
        android:gravity="center"
        android:text="@string/equally"

        android:textColor="@android:color/background_light"
        android:textSize="30sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/point"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline" />
</merge>