<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/O"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/o"
        android:textColor="@android:color/background_light"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/total"
        app:layout_constraintEnd_toStartOf="@+id/D"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/H"
        tools:layout_editor_absoluteY="143dp" />

    <TextView
        android:id="@+id/H"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/h"
        android:textColor="@android:color/background_light"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/total"
        app:layout_constraintEnd_toStartOf="@+id/O"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/K"
        tools:layout_editor_absoluteY="143dp" />

    <TextView
        android:id="@+id/A"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/a"
        android:textColor="@android:color/background_light"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/total"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/K2"
        tools:layout_editor_absoluteY="143dp" />

    <TextView
        android:id="@+id/R"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/r"
        android:textColor="@android:color/background_light"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/total"
        app:layout_constraintEnd_toStartOf="@+id/Y"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/P"
        tools:layout_editor_absoluteY="143dp" />

    <TextView
        android:id="@+id/K"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/k"
        android:textColor="@android:color/background_light"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/total"
        app:layout_constraintEnd_toStartOf="@+id/H"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/Y"
        tools:layout_editor_absoluteY="143dp" />

    <TextView
        android:id="@+id/P"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/p"
        android:textColor="@android:color/background_light"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/total"
        app:layout_constraintEnd_toStartOf="@+id/R"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="143dp" />

    <TextView
        android:id="@+id/Z"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/z"
        android:textColor="@android:color/background_light"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/total"
        app:layout_constraintEnd_toStartOf="@+id/K2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/D"
        tools:layout_editor_absoluteY="143dp" />

    <TextView
        android:id="@+id/Y"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/y"
        android:textColor="@android:color/background_light"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/total"
        app:layout_constraintEnd_toStartOf="@+id/K"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/R"
        tools:layout_editor_absoluteY="143dp" />

    <TextView
        android:id="@+id/K2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/k"
        android:textColor="@android:color/background_light"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/total"
        app:layout_constraintEnd_toStartOf="@+id/A"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/Z"
        tools:layout_editor_absoluteY="143dp" />

    <TextView
        android:id="@+id/D"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/d"
        android:textColor="@android:color/background_light"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/total"
        app:layout_constraintEnd_toStartOf="@+id/Z"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/O"
        tools:layout_editor_absoluteY="143dp" />
</merge>